feat: adiciona novas linhas de quantidade total

--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -41,7 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\CodigoContagem.cs" />
     <Compile Include="Entities\Linha.cs" />
+    <Compile Include="Extensions\LinhaExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
